<resources>
    <string name="app_name">SIT708 Quiz App</string>
    <string name="welcome_title">SIT708 Quiz App</string>
    <string name="welcome_subtitle">Enter your name to start a quick maths quiz.</string>
    <string name="name_hint">Your name</string>
    <string name="start_quiz">Start</string>
    <string name="theme_toggle_title">Theme</string>
    <string name="theme_toggle_subtitle">Switch instantly between light and dark mode.</string>
    <string name="theme_toggle_label">Dark</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="take_new_quiz">Take New Quiz</string>
    <string name="close_app">Finish</string>
</resources>
